# Cityvision-version2.0

./: .env  .env.example  .gitattributes  .gitignore  AGENT_CHECKPOINT.md  Makefile  OPEN-IN-WSL.txt  OPTIMIZATION-REPORT.md  README.md  WORKSPACE.md  _check_events.sh  _dbq.sql  _do-push.sh  _run_phone_feux.sh  _wait_ai.sh  add-windows-password.bat  docker-compose.yml  fix-cv.sh  register-service.bat  setup.bat  setup.sh  start-citevision.bat  sync-to-citevision.bat
ai-engine/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai-engine/models/: .gitkeep
ai-engine/scripts/: _test_ort_cuda.py  build_secondary_models.py  check_ai_health.py  export_seatbelt_from_pt.py  train_seatbelt.py  train_seatbelt_fallback.py  verify_ai_stack.py
ai-engine/src/citevision_ai/: __init__.py  config.py  hardware_profile.py  main.py  pipeline.py
ai-engine/src/citevision_ai/analytics/: abandoned.py  behavior.py  calibration.py  correlation.py  scene.py  scene_correlation.py  state.py  zone_geometry.py  zone_speed.py
ai-engine/src/citevision_ai/anpr/: paddleocr_module.py  paddleocr_stub.py  stub.py
ai-engine/src/citevision_ai/behavior/: __init__.py  heuristics.py
ai-engine/src/citevision_ai/budget/: resource_budget.py
ai-engine/src/citevision_ai/correlation/: __init__.py  engine.py
ai-engine/src/citevision_ai/detection/: bytetrack.py  class_groups.py  yolo_onnx.py
ai-engine/src/citevision_ai/events/: generator.py  line.py  loitering.py  zone.py
ai-engine/src/citevision_ai/evidence/: __init__.py  abort_stats.py  buffer.py  capture.py  config.py  frigate_backend.py  frigate_timeline.py  frigate_track_binder.py  frigate_track_evidence.py  gate.py  ocr_client.py  segment_align.py  segment_replay_cache.py  service.py  uploader.py
ai-engine/src/citevision_ai/face/: insightface_module.py  insightface_stub.py  stub.py
ai-engine/src/citevision_ai/identity/: __init__.py  face.py  plate.py
ai-engine/src/citevision_ai/ingest/: __init__.py  file_video_worker.py  go2rtc_publisher.py  rtsp_worker.py  segment_cycle_worker.py  timeline.py
ai-engine/src/citevision_ai/live/: burn_in.py  detection_broadcaster.py
ai-engine/src/citevision_ai/models/: schemas.py
ai-engine/src/citevision_ai/mqtt/: publisher.py
ai-engine/src/citevision_ai/road_enforcement/: __init__.py  detector.py  traffic_light.py
ai-engine/tests/: conftest.py  test_abort_stats_reconcile.py  test_api.py  test_behavior.py  test_bientot_detectors.py  test_burn_in.py  test_bytetrack.py  test_category_c_detectors.py  test_correlation.py  test_demo_loop_guard.py  test_demo_loop_meta.py  test_detection_broadcaster.py  test_emission_track_bbox.py  test_event_generator.py  test_evidence_abort_stats.py  test_evidence_buffer.py  test_evidence_capture.py  test_frigate_backend.py  test_frigate_bound_capture.py  test_frigate_correlation_accept_gate.py  test_frigate_timeline.py  test_frigate_track_binder.py  test_go2rtc_publisher.py  test_health_gpu_strict.py  test_live_detections_api.py  test_live_evidence_alignment.py  test_optional_modules.py  test_overlay_detections.py  test_overlay_snapshot.py  test_plate_track_cache.py  test_resource_budget.py  test_rtsp_worker.py  test_scene_state_e2e.py  test_segment_mode.py  test_spatial_semantic_events.py  test_speed_evidence_dedupe.py  test_speed_evidence_e2e.py  test_stubs.py  test_sudden_stop.py  test_traffic_light_hsv.py  (+5 more)
backend/: README.md  (+3 more)
video-engine/: CMakeLists.txt  README.md
video-engine/include/: dual_pipeline.h  frame_sampler.h  health_server.h  pipeline.h  rtsp_ingest.h
video-engine/include/citevision/: config.hpp  dual_pipeline.hpp  frame_sampler.hpp  health_server.hpp  rtsp_ingest.hpp
video-engine/src/: dual_pipeline.cpp  frame_sampler.cpp  health_server.cpp  main.cpp  pipeline.cpp  rtsp_ingest.cpp
(+1514 files in other folders)
