[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citevision-ai"
version = "2.0.0"
description = "Citévision v2 AI Engine — YOLO ONNX detection, ByteTrack, events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "onnxruntime-gpu>=1.17; platform_system != 'Darwin'",
    "onnxruntime>=1.17; platform_system == 'Darwin'",
    "paho-mqtt>=2.0",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
